@@ -7,16 +7,17 @@ AM_CXXFLAGS = $(LIBEBUS_CFLAGS) -I$(top_srcdir)/lib -fpic -Wall -Wextra
 bin_PROGRAMS = ebusd \
 	       ebusctl
 
-ebusd_SOURCES = src/main.cpp \
-	        src/baseloop.cpp \
-		src/ebusloop.cpp \
-		src/cycdata.cpp \
-		src/network.cpp \
+ebusd_SOURCES = lib/appl.cpp \
+		lib/daemon.cpp \
+		lib/tcpsocket.cpp \
 		lib/thread.cpp \
 		lib/logger.cpp \
-		lib/tcpsocket.cpp \
-		lib/daemon.cpp \
-		lib/appl.cpp
+		src/connection.cpp \
+		src/network.cpp \
+		src/ebusloop.cpp \
+		src/cycdata.cpp \
+		src/baseloop.cpp \
+		src/main.cpp
 
 ebusd_LDADD = $(LIBEBUS_LIBS) \
 	      -lpthread
@@ -24,9 +25,9 @@ ebusd_LDADD = $(LIBEBUS_LIBS) \
 dist_noinst_SCRIPTS = autogen.sh
 
 
-ebusctl_SOURCES = tools/ebusctl.cpp \
-		  lib/appl.cpp \
-		  lib/tcpsocket.cpp
+ebusctl_SOURCES = lib/appl.cpp \
+		  lib/tcpsocket.cpp \
+		  tools/ebusctl.cpp
 
 ebusctl_LDADD = $(LIBEBUS_LIBS)
 
